tests/js_error/source_locations/destructure/array/rest_iterator_next.exp
Error: 
  ┌ tests/js_error/source_locations/destructure/array/rest_iterator_next.js:5:15
  |
5 |         throw new Error();
  |               ^
Stack trace:
  at next (tests/js_error/source_locations/destructure/array/rest_iterator_next.js:5:15)
  at <global> (tests/js_error/source_locations/destructure/array/rest_iterator_next.js:11:6)